# ws63

./: .gitmodules  COPYRIGHT  README.md
docs/zh-CN/software/AT命令 使用指南/: AT命令 使用指南.md
docs/zh-CN/software/LiteOS 开发指南/: LiteOS 开发指南.md
docs/zh-CN/software/LiteOS 死机问题定位指南/: LiteOS 死机问题定位指南.md
docs/zh-CN/software/Matter用户指南/: Matter用户指南.md
docs/zh-CN/software/设备驱动 开发指南/: 设备驱动 开发指南.md
src/: CMakeLists.txt
src/application/: Kconfig
src/application/samples/bt/ble/: Kconfig
src/application/samples/peripheral/pwm/: CMakeLists.txt  Kconfig  pwm_preload_demo.c
src/application/samples/peripheral/spi/: spi_master_demo.c
src/application/samples/radar/: CMakeLists.txt  Kconfig
src/application/samples/radar/slp_sample/: radar_slp_sample.c
src/application/samples/radar/slp_wireless_sample/: CMakeLists.txt  radar_slp_tcp_socket.c  radar_slp_udp_socket.c  radar_slp_wireless_sample.c
src/application/samples/wifi/: CMakeLists.txt  Kconfig
src/application/ws63/: CMakeLists.txt  Kconfig
src/application/ws63/watchcontrol/: CMakeLists.txt  main.c  mqtt_task.c  mqtt_task.h  sensor_task copy.c  sensor_task.c  sle_speed_server.c  sle_speed_server_adv.c  wifi_task.c  wifi_task.h
src/application/ws63/watchdevice/: CMakeLists.txt  main.c  sensor_task.c  sensor_task.h  sle_speed_client.c
src/application/ws63/ws63_liteos_application/: main.c  main.h
src/drivers/chips/ws63/dyn_mem/: dyn_mem.c  (+1 more)
src/drivers/drivers/driver/: CMakeLists.txt
src/kernel/liteos/liteos_v208.5.0/: CMakeLists.txt
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/: CMakeLists.txt
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/cmsis/: CMakeLists.txt  cmsis_liteos1.c  cmsis_liteos2.c
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/freertos/: CMakeLists.txt  Kconfig  Makefile  README.md
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/freertos/include/: portmacro.h
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/freertos/src/: Makefile  envent_group.c  heap_3.c  port.c  queue.c  tasks.c  timer.c
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/linux/: CMakeLists.txt
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/linux/src/: driver.c  wait.c
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/rt-thread/: README.md
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/rt-thread/src/: rt_interrupt.c  rt_mem.c  rt_mp.c  rt_thread.c
src/kernel/liteos/liteos_v208.5.0/Huawei_LiteOS/compat/rt-thread/src/core-extend/: rt_completion.c  rt_dl.c  rt_ulog.c  rt_waitqueue.c  rt_workqueue.c
src/middleware/services/: CMakeLists.txt
src/middleware/services/matter/: CMakeLists.txt  hisi_matter_patch.sh  libMatter.mk
src/middleware/services/matter/adapter/config/hisilicon/: .gn  BUILD.gn  args.gni
src/middleware/services/matter/adapter/config/hisilicon/mbedtls/: BUILD.gn
src/middleware/services/matter/adapter/config/hisilicon/toolchain/: BUILD.gn
src/middleware/services/matter/adapter/examples/lighting-app/hisilicon/: .gn  BUILD.gn  args.gni
src/middleware/services/matter/adapter/examples/lighting-app/hisilicon/main/: DeviceCallbacks.cpp  LightingManager.cpp  chipinterface.cpp
src/middleware/services/matter/adapter/examples/lighting-app/hisilicon/main/include/: DeviceCallbacks.h  LightingManager.h
src/middleware/services/matter/adapter/examples/platform/hisilicon/common/: CHIPDeviceManager.cpp  CHIPDeviceManager.h  CommonDeviceCallbacks.cpp  CommonDeviceCallbacks.h  HisiAppServer.cpp  HisiAppServer.h
src/middleware/services/matter/adapter/examples/platform/hisilicon/ota/: OTAHelper.cpp  OTAHelper.h
src/middleware/services/matter/adapter/src/platform/hisilicon/: BLEGattSvc.cpp  BLEGattSvc.h  BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  BlePlatformConfig.h  CHIPDevicePlatformConfig.h  CHIPDevicePlatformEvent.h  CHIPMem-Platform.cpp  CHIPPlatformConfig.h  CertificateStoreManager.cpp  CertificateStoreManager.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  DeviceAttestationCredsProviderImpl.cpp  DeviceAttestationCredsProviderImpl.h  DiagnosticDataProviderImpl.cpp  DiagnosticDataProviderImpl.h  HisiConfig.cpp  HisiConfig.h  HisiFactoryDataProvider.cpp  HisiFactoryDataProvider.h  InetPlatformConfig.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  Logging.cpp  LwIPCoreLock.cpp  MatterAtCmd.cpp  MatterAtCmd.h  NetworkCommissioningDriver.h  NetworkCommissioningWiFiDriver.cpp  OTAImageProcessorImpl.cpp  OTAImageProcessorImpl.h  PlatformManagerImpl.cpp  PlatformManagerImpl.h  SystemPlatformConfig.h  SystemTimeSupport.cpp  SystemTimeSupport.h  (+3 more)
src/middleware/services/matter/patch/: matter-v1.4.2-hisilicon-patch-2026-02-03.patch
src/middleware/services/srv_tiot_host/: Kconfig
src/open_source/lvgl/: CMakeLists.txt
src/open_source/mbedtls/mbedtls_v3.6.0/: Makefile
src/open_source/mqtt/: CMakeLists.txt  mqtt_v1.3.12.patch
src/open_source/wpa_supplicant/liteos_wpa_src/: os_rtos.c
src/open_source/wpa_supplicant/wpa_supplicant/: config.c  ctrl_iface.c  events.c  sme.c  wpa_supplicant.c  wpa_supplicant_i.h
src/protocol/: Kconfig
src/protocol/radar/service/: CMakeLists.txt
(+343 files in other folders)
