set(MODULE_y)
list(APPEND MODULE_${LOSCFG_COMPAT_CMSIS} cmsis)
list(APPEND MODULE_${LOSCFG_COMPAT_LINUX} linux)
list(APPEND MODULE_${LOSCFG_COMPAT_RT_THREAD} rt-thread)
list(APPEND MODULE_${LOSCFG_COMPAT_FREERTOS} freertos)

FOREACH(CUR_MODULE_y ${MODULE_y})
    add_subdirectory(${CUR_MODULE_y})
ENDFOREACH(CUR_MODULE_y)
