# Copyright (c) HiSilicon (Shanghai) Technologies Co., Ltd. 2025-2025. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

examples_plat_dir = "${chip_root}/examples/platform/hisilicon"

static_library("MatterApp") {
  include_dirs = [
    "${examples_plat_dir}",
    "main/include",
  ]

  deps = [
    "${chip_root}/examples/lighting-app/lighting-common",
    "${chip_root}/src/lib",
    "${chip_root}/src/platform/logging:default",
    "${chip_root}/src/setup_payload:onboarding-codes-utils",
  ]

  sources = [
    "${examples_plat_dir}/common/HisiAppServer.cpp",
    "${examples_plat_dir}/common/CHIPDeviceManager.cpp",
    "${examples_plat_dir}/common/CommonDeviceCallbacks.cpp",
    "${examples_plat_dir}/ota/OTAHelper.cpp",
    "main/DeviceCallbacks.cpp",
    "main/chipinterface.cpp",
    "main/LightingManager.cpp",
  ]


  output_name = "libMatterApp"
  output_dir = "${root_out_dir}/lib"
  complete_static_lib = true
}

group("default") {
  deps = [ ":MatterApp" ]
}
